--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <body>
 <p>Dotty 中文站维护中，请等待 Scala 3.0.0 正式发布。</p>
-<p>Dotty 官方网站：<a href="url">https://github.com/lampepfl/dotty</a></p>
-<p>Dotty Github 仓库：<a href="url">https://github.com/lampepfl/dotty</a></p>
+<p>Dotty 官方网站：<a href="https://dotty.epfl.ch/">https://dotty.epfl.ch/</a></p>
+<p>Dotty Github 仓库：<a href="https://github.com/lampepfl/dotty">https://github.com/lampepfl/dotty</a></p>
 </body>
 
 </html>
